src/App/comps/Dashboard/Profile/Profile.scss
.Profile {

  &__userData {
    display: flex;
    flex-direction: column;
    background-color: #fff;
    border-radius: 15px;
    padding: 25px;

    img {
      width: 215px;
      height: 215px;
      border-radius: 50%;
    }

  }

  &__userDataElem {
    margin-top: 15px;
  }

  &__userDataElemTitle {
    font-size: 26px;
    font-weight: bold;

    @media(max-width:550px) {
      font-size: 1.2em;
    }

  }

  &__userDataElemText {
    font-size: 20px;
    font-style: italic;

    @media(max-width:550px) {
      font-size: 0.8em;
    }

  }

  &__logInButton {

    margin-top: 15px;

    button {
      padding: 8px;
      width: 120px;
      font-size: 25px;
      font-weight: bold;
      border: 0px;
      color: rgb(255, 255, 255);
      border-radius: 5px;
      background-color: rgb(9, 206, 25);
      transition: 0.3s all ease;

      &:hover {
        cursor: pointer;
        background-color: rgb(0, 255, 21);
      }

    }

  }

  &__logOutButton {

    margin-top: 15px;

    button {
      padding: 8px;
      width: 120px;
      font-size: 25px;
      font-weight: bold;
      border: 0px;
      color: rgb(255, 255, 255);
      border-radius: 5px;
      background-color: rgb(206, 9, 9);
      transition: 0.3s all ease;

      &:hover {
        cursor: pointer;
        background-color: rgb(255, 0, 0);
      }

    }

  }

}

